<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" >
    <!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		checklist
     *	@date 		0
     *	@title 		Checklist
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.2.9.xd
     *
     */
    -->
    <ScrollView android:id="@+id/checklist"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="850dp" >

            <View android:id="@+id/_bg__checklist"
                android:background="@drawable/_bg__checklist_shape"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="410dp"
                android:layout_height="850dp" />

            <View android:id="@+id/rectangle_8"
                android:background="@drawable/rectangle_8_shape"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="410dp"
                android:layout_height="77dp" />

            <ImageView android:id="@+id/path_4"
                android:src="@drawable/path_4"
                android:contentDescription="path_4"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="311.88888549805dp"
                android:layout_width="380dp"
                android:layout_height="68dp" />

            <View android:id="@+id/rectangle_17"
                android:background="@drawable/rectangle_17_shape"
                android:alpha="0.80000001192093"
                android:layout_marginLeft="26dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="394dp"
                android:layout_width="367.79999999702dp"
                android:layout_height="80.79999999702dp" />

            <View android:id="@+id/rectangle_18"
                android:background="@drawable/rectangle_18_shape"
                android:alpha="0.80000001192093"
                android:layout_marginLeft="26dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="562dp"
                android:layout_width="367.79999999702dp"
                android:layout_height="80.79999999702dp" />

            <TextView android:id="@+id/required_paperworks"
                android:fontFamily="Avenir"
                android:layout_gravity="center_vertical|end"
                android:gravity="end"
                android:textSize="20sp"
                android:textColor="@color/required_paperworks_color"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="26dp"
                android:layout_width="206dp"
                android:layout_height="31dp"
                android:text="@string/required_paperworks_string"
                />

            <ImageView android:id="@+id/np_back_26915_132d57"
                android:src="@drawable/np_back_26915_132d57"
                android:contentDescription="np_back_26915_132d57"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="29dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView android:id="@+id/today"
                android:fontFamily="Avenir"
                android:textSize="16sp"
                android:textColor="@color/today_color"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="118dp"
                android:layout_width="63dp"
                android:layout_height="41dp"
                android:text="@string/today_string"
                />

            <TextView android:id="@+id/aug_11"
                android:fontFamily="Avenir"
                android:textSize="16sp"
                android:textColor="@color/today_color"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="272dp"
                android:layout_width="73dp"
                android:layout_height="41dp"
                android:text="@string/aug_11_string"
                />

            <TextView android:id="@+id/sept_02"
                android:fontFamily="Avenir"
                android:textSize="16sp"
                android:textColor="@color/today_color"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="516dp"
                android:layout_width="83dp"
                android:layout_height="41dp"
                android:text="@string/sept_02_string"
                />

            <TextView android:id="@+id/submit_official_documents"
                android:fontFamily="Avenir"
                android:textSize="14sp"
                android:textColor="@color/required_paperworks_color"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="336dp"
                android:layout_width="216dp"
                android:layout_height="40dp"
                android:text="@string/submit_official_documents_string"
                />

            <TextView android:id="@+id/complete_two_factor_authentication_enrollment"
                android:fontFamily="Avenir"
                android:textSize="14sp"
                android:textColor="@color/required_paperworks_color"
                android:layout_marginLeft="102dp"
                android:layout_marginTop="582dp"
                android:layout_width="229dp"
                android:layout_height="63dp"
                android:text="@string/complete_two_factor_authentication_enrollment_string"
                />

            <TextView android:id="@+id/submit_health_and_immunization_information"
                android:fontFamily="Avenir"
                android:textSize="14sp"
                android:textColor="@color/required_paperworks_color"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="414dp"
                android:layout_width="216dp"
                android:layout_height="73dp"
                android:text="@string/submit_health_and_immunization_information_string"
                />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="39dp"
                android:layout_marginStart="39dp"
                android:layout_marginTop="333dp"/>

            <RelativeLayout android:id="@+id/component_7___2"
                android:layout_marginTop="174dp"
                android:layout_marginStart="26dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView android:id="@+id/path_5"
                    android:src="@drawable/path_5"
                    android:contentDescription="path_5"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="380dp"
                    android:layout_height="68dp" />

                <TextView android:id="@+id/activate_gt_account"
                    android:fontFamily="Avenir"
                    android:textSize="14sp"
                    android:textColor="@color/required_paperworks_color"
                    android:layout_marginLeft="65dp"
                    android:layout_marginTop="17dp"
                    android:layout_width="174dp"
                    android:layout_height="26dp"
                    android:text="@string/activate_gt_account_string"
                    />

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="15dp"/>

                <ImageView android:id="@+id/np_drop_down_1123247_bdbdbd"
                    android:src="@drawable/np_drop_down_1123247_bdbdbd"
                    android:contentDescription="np_drop_down_1123247_bdbdbd"
                    android:layout_marginLeft="329dp"
                    android:layout_marginStart="329dp"
                    android:layout_marginTop="17dp"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />

            </RelativeLayout>

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="39dp"
                android:layout_marginStart="39dp"
                android:layout_marginTop="414dp"/>

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="39dp"
                android:layout_marginStart="39dp"
                android:layout_marginTop="581dp"/>

            <ImageView android:id="@+id/np_drop_down_1123247_bdbdbd_ek1"
                android:src="@drawable/np_drop_down_1123247_bdbdbd_ek1"
                android:contentDescription="np_drop_down_1123247_bdbdbd_ek1"
                android:layout_marginLeft="355dp"
                android:layout_marginStart="355dp"
                android:layout_marginTop="585dp"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <ImageView android:id="@+id/np_drop_down_1123247_bdbdbd_ek2"
                android:src="@drawable/np_drop_down_1123247_bdbdbd_ek2"
                android:contentDescription="np_drop_down_1123247_bdbdbd_ek2"
                android:layout_marginLeft="355dp"
                android:layout_marginStart="355dp"
                android:layout_marginTop="333dp"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <ImageView android:id="@+id/np_drop_down_1123247_bdbdbd_ek3"
                android:src="@drawable/np_drop_down_1123247_bdbdbd_ek3"
                android:contentDescription="np_drop_down_1123247_bdbdbd_ek3"
                android:layout_marginLeft="355dp"
                android:layout_marginStart="355dp"
                android:layout_marginTop="416dp"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <ImageView android:id="@+id/np_dots_395568_132d57"
                android:src="@drawable/np_dots_395568_132d57"
                android:contentDescription="np_dots_395568_132d57"
                android:layout_marginLeft="367dp"
                android:layout_marginStart="367dp"
                android:layout_marginTop="24dp"
                android:layout_width="30dp"
                android:layout_height="30dp" />

                    </RelativeLayout>

                </ScrollView>
            </HorizontalScrollView>